radix-transactions/tests/assets/manifest_generator_error_proof_not_found_2.diag
error: proof id 'ManifestProof(1)' not found
   |
18 |   Bucket("some_bucket")
19 |   Decimal("1")
20 |   Proof("proof");
21 | 
22 | DROP_PROOF
23 |   Proof(1u32)
   |         ^^^^ proof not found
24 | ;
   |